# led-testing-toolkit

./: .coveragerc  .env_example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  tmp.py
api/core/: config.py
api/endpoints/: devices.py  log_parser.py  parser.py  player.py  tools.py  websocket.py
api/models/: common_models.py  devices_models.py  log_parser_models.py  parser_models.py  player.py  player_models.py  requests.py  responses.py  schemas.py  tools.py
api/services/: device_services.py  log_parser_service.py  parser_service.py  player_service.py  tools_service.py
api/static/: script.js  styles.css
api/static/css/: forms.css  main.css  player.css  tabs.css
api/static/js/: forms.js  main.js  player.js  tabs.js  utils.js
api/templates/: index.html
api/templates/partials/: _comparator_tab.html  _etalon_generator_tab.html  _player_tab.html  (+2 more)
api/utils/: helpers.py
led_testing_toolkit/: async_mongo_db_connector.py  led_models.py  led_parser.py  led_plot.py  led_simulation_runner.py  led_types.py  mongo_db_connector.py
led_testing_toolkit/led_modeler/: generator.py  models.py  patterns.py  simulator.py  utils.py
led_testing_toolkit/math/: aggregator.py  comparator.py  interpolator.py  models.py
led_testing_toolkit/scripts/: compare_patterns.py  generate_etalons.py  generate_indication_from_parameters.py  generate_indication_from_source.py  generate_record_from_source.py  make_comparison.py  run_led_simulation.py  run_logs_splitter.py
led_testing_toolkit/utils/: collection_name.py  data_processing.py  funcs.py  logs_splitter.py  make_indication_comparison.py
tests/: conftest.py  pytest.ini
tests/api/: test_main.py
tests/led_testing_toolkit/: test_async_mongo_db_connector.py  test_led_parser.py  test_led_simulation_runner.py  test_led_types.py  test_mongo_db_connector.py
(+39 files in other folders)
